# fashion-intel-workbench

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  main.py  responses.py
backend/app/aggregation/: __init__.py  base.py  dedup.py  rss_collector.py  web_collector.py
backend/app/models/: __init__.py  _compat.py  ai_provider.py  article.py  bookmark.py  brand.py  brand_logo.py  briefing.py  deep_analysis.py  keyword.py  knowledge.py  monitor_group.py  source.py  tag.py  user.py
backend/app/routers/: admin.py  ai_providers.py  articles.py  auth.py  bookmarks.py  briefings.py  dashboard.py  knowledge.py
backend/app/schemas/: admin.py  ai_provider.py  article.py  auth.py  bookmark.py  briefing.py  knowledge.py
backend/app/services/: aggregation_service.py  ai_provider_adapter.py  ai_provider_service.py  ai_service.py  article_service.py  bookmark_service.py  brand_service.py  briefing_service.py  encryption_service.py  file_storage_service.py  (+2 more)
backend/tests/: test_admin_router.py  test_aggregation.py  test_aggregation_service.py  test_ai_provider_adapter.py  test_ai_provider_service.py  test_ai_service.py  test_article_search_service.py  test_articles_router.py  test_auth.py  test_bookmarks_router.py  test_briefings_router.py  test_dashboard_router.py  test_encryption_service.py  test_knowledge_router.py  test_project_setup.py
(+84 files in other folders)
