[project]
name = "fashion-intel-workbench"
version = "0.1.0"
description = "Fashion Intel Workbench - AI-powered fashion intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt>=2.10.0",
    "celery>=5.4.0",
    "redis>=5.2.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.3",
    "openai>=1.57.0",
    "cryptography>=44.0.0",
    "apscheduler>=3.10.4",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.18",
    "gunicorn>=22.0.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.119.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
